<resources>
    <string name="app_name">金金记较</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="spn_prompt_category">类别</string>
    <string name="spn_prompt_subcategory">子类别</string>
    <string name="spn_prompt_account">账户</string>
    <string name="spn_prompt_corporation">商家</string>
    <string name="spn_prompt_project">项目</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>

    <string name="aboutUs">关于我们</string>
    <string name="jianjie">我们团队立志要开发一款简单的、好用的、人性化 的个人钱包管理APP软件；
	            此软件能带您轻松管理自己的收入和花销，还有统计和警告功能，再也不用担心钱花超了。</string>

    <string name="login">登录</string>
    <string name="forgetPwd">忘记密码</string>
    <string name="startRegist">开始注册</string>
    <string name="regist">注册</string>
    <string name="resPwd">重置密码</string>
    <string name="confirm">确认</string>

    <string name="detail_tab">明细</string>
    <string name="category_report_tab">类别报表</string>
    
    <string name="setting">特色设置</string>
    <string name="setting_des">该功能正在开发中，敬请期待！</string>

    <string name="wish">心愿墙</string>
    <string name="wish_des">该功能正在开发中，敬请期待！</string>

    <string name="count">统计</string>
    <string name="count_des">该功能正在开发中，敬请期待！</string>

    <!-- memo——MyDialog -->
    <string name="dialog_memo_title">备注</string>
    <string name="dialog_memo_ok">保存</string>
    <string name="dialog_memo_cancle">取消</string>

    <!-- TransactionTabActivity -->
    <string name="input_message">请填写金额</string>
    <string name="edit_message">编辑成功</string>
    <string name="save_message">保存成功</string>
    <string name="edit_in">编辑收入</string>
    <string name="edit_out">编辑支出</string>
</resources>
